DDI-Lifecycle/3.3/model/_sources/item-types/NCube/index.rst.txt
NCube
-----

An NCube is a 1..n dimension structure which relates a set of individual values to each other by defining them within a matrix. The NCube may be the result of aggregations, cross-tabulation, time-series, etc. The NCube is described by its dimensions which are represented by categorical variables (variables with a set number of values of specific definition that can be used to identify a specific cell as part of a matrix address). The resulting cells can contain one or more measures, also defined by variables. In addition to the standard name, label, and description of the NCube, it contains a reference to a universe, defines both the normal source of the data in the cells and unit of analysis, the purpose of creating the structured data, the dimensions and measures, as well as the ability to attached any other attribute (i.e., footnote, cell or region specific note) to a specified area of the NCube. Three attribute serve as informational check values; dimensionCount, cellCount, and isClean.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "NCubeName",":doc:`/composite-types/NameType/index`","0..n","A name for the NCube. May be expressed in multiple languages. Repeat the element to express names with different content, for example different names for different systems."
   "Label",":doc:`/composite-types/LabelType/index`","0..n","A display label for the NCube. Supports multiple language versions of the same content as well as optional formatting of the content. Repeat for labels with different content, for example, labels with differing length limitations."
   "Description",":doc:`/composite-types/StructuredStringType/index`","0..1","A description of the content and structure of the NCube. Supports multiple language versions of the same content as well as optional formatting of the content."
   "UniverseReference",":doc:`/item-types/Universe/index`","0..n","Reference to the universe statement containing a description of the persons or other elements that this NCube refers to, and to which any analytic results refer. If more than one universe is referenced the universe of the variable is the intersect of the referenced universes."
   "ImputationReference",":doc:`/item-types/ProcessingInstruction/index`","0..1","Reference to an imputation process described as a GeneralInstruction or GenerationInstruction held in a ProcessingInstructionScheme."
   "SourceUnit",":doc:`/composite-types/CodeValueType/index`","0..1","The normal source of the information contained in the NCube. In the case of a survey this may be a respondent, proxy, interviewer, or other source. In the case of administrative data the position of a field on a form e.g., ""top of page"", ""item 3"", ""generated by data processor"", etc. Supports the use of an external controlled vocabulary."
   "AnalysisUnit",":doc:`/composite-types/CodeValueType/index`","0..1","The entity to which the data refer, for example, individuals, families or households, groups, institutions/organizations, administrative units, etc. Supports the use of an external controlled vocabulary. The DDI Alliance has provided a controlled vocabulary (AnalysisUnit) to support this element at http://www.ddialliance.org/controlled-vocabularies."
   "Purpose",":doc:`/composite-types/StructuredStringType/index`","0..1","Purpose for which the NCube was created. For example, designed to support a set of age pyramids generated yearly. Supports multiple language versions of the same content as well as optional formatting of the content."
   "Dimension",":doc:`/composite-types/DimensionType/index`","0..n","NCubes are defined by their dimensions. A dimension is provided a rank and a reference to a variable that describes it. Cell locations are ""addressed"" by the value of their intersect on each dimension provided in rank order."
   "CoordinateRegion",":doc:`/composite-types/CoordinateRegionType/index`","0..n","Defines the area of attachment for an attribute. It may be defined as the NCube as a whole or as certain dimensions or values of dimensions."
   "MeasureDefinition",":doc:`/composite-types/MeasureDefinitionType/index`","0..n","Defines the structure and type of measure captured within the cells. This may be repeated to describe multiple measure for the cells (i.e., count, percent of universe, dimensional percent, index, text, suppression flag, etc.)."
   "Attribute",":doc:`/composite-types/AttributeType/index`","0..n","An attribute may be any object which should be attached to all or part of the NCube. It may be defined as a Variable or contain textual content (such as a footnote)."
   "DimensionCount","nonNegativeInteger","0..1","The number of dimensions found in the NCube. Caution in using optional checksums is recommended. Conflict between checksums and the items being counted can cause problems with warning flags during processing. If using checksum to capture information for internal processing purposes, the use of automatically generated check sums is strongly urged."
   "CellCount","nonNegativeInteger","0..1","The number of cells (measures) found in the NCube. Note that this is the number of cells produced by dimension structure not the number of cells containing data in a sparse NCube. Caution in using optional checksums is recommended. Conflict between checksums and the items being counted can cause problems with warning flags during processing. If using checksum to capture information for internal processing purposes, the use of automatically generated check sums is strongly urged."
   "IsClean","boolean","0..1","A value of ""true"" indicates that all cells have the potential for content values. If set to ""false"" Attribute and CoordinateRegion should be used to define the sparse areas of the NCube, those that have no content by definition. For example a cross-tabulation between Household Type (Family, Non-Family) and Number of persons in Household (1,2,3,4,5,6,7+) would need an attribute for Family/1 Person as this will always be empty due to the definition of Family as two or more related persons."

Properties Inherited from Versionable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "URN","string","1..1",""
   "Agency","string","1..1",""
   "ID","string","1..1",""
   "Version","string","1..1",""
   "UserID",":doc:`/composite-types/UserIDType/index`","0..n","Allows for the specification of identifiers other than the specified DDI identification of the object. This may be a legacy ID from DDI-C, a system specific ID such as for a database or registry, or a non-DDI unique identifier. As the identifier is specific to a system the system must be identified with the UserID structure."
   "UserAttributePair",":doc:`/composite-types/StandardKeyValuePairType/index`","0..n","A system specific user defined property of the object expressed as a key/value pair. As this is specific to an individual system the use of controlled vocabularies for the key is strongly recommended."
   "VersionResponsibility","string","0..1","Person or organization within the MaintenanceAgency responsible for the version change. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, it may be included in this notation. This is primarily intended for internal use."
   "VersionResponsibilityReference",":doc:`/item-types/Agent/index`","0..1","Reference person or organization within the MaintenanceAgency responsible for the version change, as described in an OrganizationScheme. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, a Relation should be created between the individual referenced here and his/her organization. This is primarily intended for internal use."
   "VersionRationale",":doc:`/composite-types/VersionRationaleType/index`","0..1","Textual description of the rationale/purpose for the version change and a coded value to provide an internal processing flag within and organization or system. Note that versioning can only take place on objects owned by the specified DDI Agency. If you are creating a local instance of an object from another agency for current or future modification use BasedOnObject. If the changes being made result in what you determine to be new object rather than a version of a previous object, i.e. the change is too extensive to consider it a version of the existing object, create a new object and use BasedOnObject to provide a link to the object or objects that were a basis for the new object."
   "BasedOnObject",":doc:`/composite-types/BasedOnObjectType/index`","0..1","Use when creating an object that is based on an existing object or objects that are managed by a different agency or when the new object is NOT simply a version change but you wish to maintain a reference to the object that served as a basis for the new object. BasedOnObject may contain references to any number of objects which serve as a basis for this object, a BasedOnRationalDescription of how the content of the referenced object was incorporated or altered, and a BasedOnRationalCode to allow for specific typing of the BasedOnReference according to an external controlled vocabulary."
   "RelatedOtherMaterialReference",":doc:`/item-types/OtherMaterial/index`","0..n","The inclusion of an existing OtherMaterial by reference. Use for any type of OtherMaterial not specifically addressed by an inline description for such as ExternalAid in QuestionItem."
   "VersionDate","cogsDate","0..1","Date of version using the union set BaseDateType. Duration should not be used in this field, even though allowed by the ISO format enforced by the parser."
   "IsPublished","boolean","0..1","Indicates that the maintainable will not be changed without versioning, and is a stable target for referencing."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/item-types/Versionable/index`
    * **NCube**


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/NCubeGroup/index`
* :doc:`/item-types/NCubeScheme/index`
* :doc:`/composite-types/NCubesInRecordType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/NCube.svg

